--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-cssmin": "~0.9.0",
     "load-grunt-tasks": "~0.4.0"
+  },
+  "devDependencies": {
+    "grunt-contrib-clean": "^1.0.0"
   }
 }
